<resources>
    <string name="app_name">Enigma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_account">My Account</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_delivery">Deliveries</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_logout">Logout</string>
    <string name="txtheader">Enigma</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtwelcome">welcome</string>
    <string name="txtemail">e-mail</string>
    <string name="txtpass">password</string>
    <string name="btnlogin">Login</string>
    <string name="pbtnproduct">Products</string>
    <string name="pbtnaccount">Accounts</string>
    <string name="pbtnSales">Sales</string>
    <string name="pbtndelivery">Deliveries</string>
    <string name="tatViewAdd">Products</string>
    <string name="txtaddorupdate">Add/Update</string>
    <string name="btnclear">Clear</string>
    <string name="txtid">ID...</string>
    <string name="txtName">Name...</string>
    <string name="txtDesc">Description...</string>
    <string name="txtRate">Rate...</string>
    <string name="txtPrice">Price...</string>
    <string name="btnInsertDate">Insert Data</string>
    <string name="deleteData">Delete Data</string>
    <string name="updateData">Update Data</string>
    <string name="viewAllData">View All Data</string>
    <string name="viewAllDelivery">View All Delivery</string>
    <string name="delivery">Delivery</string>
    <string name="cusName">Customer Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="proID">Product ID</string>
    <string name="proName">Product Name</string>
    <string name="qty">Quantity</string>
    <string name="addDelivery">Add Delivery</string>
    <string name="updateDelivery">Update Delivery</string>
    <string name="deleteDelivery">Delete Delivery</string>
    <string name="purchase">Purchase Item</string>
    <string name="itemName">Item Name</string>
    <string name="btnAdd">Add</string>
    <string name="changePurchase">Change Purchased Items</string>
    <string name="purchaseID">Purchase ID</string>
    <string name="updatePur">Update</string>
    <string name="deletePur">Delete</string>
    <string name="viewPurchases">View All Purchases</string>

    <!-- umaya -->
    <string name="LoginHeader">LOGIN</string>
    <string name="btnLogin">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="RegisterLink">No account yet? REGISTER</string>
    <string name="RegisterHeader">REGISTER</string>
    <string name="btnRegister">REGISTER</string>
    <string name="LoginLink">Already registered? LOGIN</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ID">Employee ID</string>
    <string name="Name">Employee Name</string>
    <string name="Contact">Contact Number</string>
    <string name="logo">ENIGMA</string>
    <string name="AccountHeader">My Account</string>
    <string name="btnSaveChanges">SAVE CHANGES</string>
    <string name="btnDelete">DELETE MY ACCOUNT</string>
    <string name="viewEmployee">View All Employees</string>
    <string name="updateEmp">UPDATE EMPLOYEE</string>
    <string name="deleteEmp">DELETE EMPLOYEE</string>
    <string name="searchById">Search by ID</string>
    <string name="alog">ADMIN LOGIN</string>
    <string name="viewAllDetails">VIEW ALL EMPLOYEE DETAILS</string>
    <string name="txtViewID">ID</string>
    <string name="txtsearchView">Search...</string>
</resources>
