<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="401dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/purchase"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/itemName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/cname"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cusName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/qty"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/qty"
        android:inputType="textPersonName"
        android:textColor="@color/greyish"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtPrice"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/btnAdd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnViewAllpur"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/viewPurchases"
        android:textColor="@color/white" />
</LinearLayout>