<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <EditText
        android:id="@+id/txtQty"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/qty"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCusAddress" />

    <TextView
        android:id="@+id/ProductstxtView"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delivery"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCusAddress"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCusName" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCusName" />

    <EditText
        android:id="@+id/txtCusName"
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/cusName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProductstxtView" />

    <EditText
        android:id="@+id/txtProID"
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/proID"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProductstxtView" />

    <EditText
        android:id="@+id/txtProName"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/proName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtQty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCusName"
        app:layout_constraintVertical_bias="0.933" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/txtPrice"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCusAddress" />

    <Button
        android:id="@+id/btnAddDelivery"
        android:layout_width="367dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/addDelivery"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/btnclear"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddDelivery"
        app:layout_constraintVertical_bias="0.172" />
</androidx.constraintlayout.widget.ConstraintLayout>