<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/changePurchase"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cname" />

    <EditText
        android:id="@+id/price"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtPrice"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/cname"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cusName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/itemName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pId" />

    <EditText
        android:id="@+id/pId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/purchaseID"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextQty"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/qty"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@android:string/search_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:text="@string/deletePur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQty"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/updatePur"
        app:layout_constraintBottom_toBottomOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQty"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>