<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AdminLogin">

    <TextView
        android:id="@+id/logo_enigma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/adminlogin"
        android:layout_width="161dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alog"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_enigma"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_above="@id/et_password"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:background="@color/greyish"
        android:fontFamily="sans-serif"
        android:hint="@string/txtemail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminlogin"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:background="@color/greyish"
        android:fontFamily="sans-serif"
        android:hint="@string/txtpass"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/btn_loginadmin"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_below="@id/et_password"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:text="@string/btnlogin"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.192" />


</androidx.constraintlayout.widget.ConstraintLayout>